--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uiw/codemirror-theme-tokyo-night": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "archiver": "^7.0.1",
+    "axios": "^1.9.0",
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
     "formidable": "^3.5.3",
@@ -27,8 +28,8 @@
     "@types/archiver": "^6.0.3",
     "@types/formidable": "^3.4.5",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
